# LiveAPI_MakeDoc

./: .gitignore  Live.css  README.md  index.html  install.py  justfile  pyproject.toml  render.yaml  styles.css  watch.py
.github/scripts/: compute_diff.js  create_releases.js  delete_release.js  index_template.html  package.json  update_index.js
.github/workflows/: create_release.yml
12.1.0/: Live.xml
12.1.5/: Live.css  Live.xml
12.1.5/Live/: __init__.py
release/: READEME.md
release/12.1.5/: Live.xml
releases/12.1.0/Live/: __init__.py
server/: __init__.py  app.yaml  main.py  run.sh
server/templates/: index.html  version.html
set/: set.als
src/: DocumentationGenerator.py  Live.css  LiveAPI_MakeDoc.py  MakeDoc.py  StubGenerator.py  __init__.py  stub.py
src/_Support/: inspect.py  stub.py
src/generators/: DocumentationGenerator.py  Generator.py  StubGenerator.py  StubGenerator_.py
src/helpers/: app.py
src/types/: BuildMode.py
web/: index.html  styles.css  versions.json
web/src/: App.svelte  main.js
