[project]
name = "liveapi-makedoc"
version = "0.1.0"
description = ""
authors = [
    {name = "Isaac Poole",email = "isaacpoolemusic@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "python-simplexml (>=0.1.5,<0.2.0)"
]

[tool.poetry]
packages = [{include = "server"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
